Add file service tests